@@ -1,3 +1,7 @@
+Mon Aug 17 08:11:53 2009  Tadayoshi Funaba  <tadf@dotrb.org>
+
+	* lib/cmath.rb: use num#i.
+
 Mon Aug 17 07:59:00 2009  Tadayoshi Funaba  <tadf@dotrb.org>
 
 	* numeric.c (flo_pow,fix_pow): may return complex number.
